# batman-robin

./: Cargo.toml
src/: client.rs  error.rs  gateway_events.rs  lib.rs
src/cli/: gateways.rs  gw_mode.rs
src/commands/: aggregation.rs  ap_isolation.rs  bridge_loop_avoidance.rs  gateway_events.rs  gateways.rs  gw_mode.rs  interface.rs  mesh.rs  mod.rs  neighbors.rs  originators.rs  routing_algo.rs  transglobal.rs  translocal.rs  utils.rs
src/model/: gateway_event.rs  interface_selector.rs  mesh.rs  mod.rs
src/netlink/: attribute_builder.rs  message.rs  socket.rs
